# qig-gcp-training

./: Dockerfile  README.md  pyproject.toml
configs/: 100m_full.yaml  100m_phase0.yaml  100m_phase1.yaml  500m_full.yaml
coordizer/: __init__.py  coordizer_v2.py  resonance_bank.py
data_pipeline/: geometry_annotator.py  harvest_to_qktj.py  text_to_qktj.py
qig_kernel/: __init__.py  attention.py  consciousness.py  decoherence.py  model.py  natural_gradient.py  regime.py  simplex.py
scripts/: build_push.sh  setup_gcs.sh  submit_vertex.py
training/: __init__.py  curriculum.py  data.py  losses.py  monitoring.py  train.py
validation/: beta_function.py  consciousness_eval.py  purity_gate.py
